--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
               </div>
          </div>
         </section> 
+        <div class="clearfix">
         
+        </div>
         <section class="showcase-img">
             
             <ul class="meals-showcase">
@@ -185,7 +187,7 @@
                          <p>Enjoy your meal after less than 20 minutes. See you the next time! </p>
                     </div>
                     <a href="#" class="btn-app"> <img src="/resources/img/download-app-android.png" alt="adroid-download"></a>
-                    <a href="#" class="btn-app"> <img src="/resources/img/download-app.svg" alt="adroid-download"></a>
+                    <a href="#" class="btn-app"> <img src="/resources/img/download-app-android.png" alt="adroid-download"></a>
                 </div>
             </div>
         </section>
